# empty_project_templates

glfw_glew_setup_linux_64/: CMakeLists.txt  main.cpp
glut_setup_linux_64/: CMakeLists.txt  main.cpp
